--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
           server: ftp.dijaminhoki-ads.site
-          username: zeusmaxwin@zeusmaxwin.dijaminhoki-ads.site
+          username: gacorslot@gacorslot.dijaminhoki-ads.site
           password: ${{ secrets.FTP_PASSWORD }}
           exclude: |
             **/.git*
